# Skay_pro_yanenco

./: .gitignore  README  pyproject.toml
src/: masks.py  processings.py  waidget.py
src_1/: tests.py
test/: test.py
